--- a/public/css/0xdbase.css
+++ b/public/css/0xdbase.css
@@ -82,10 +82,9 @@ html,body {
   position:relative;
 }
 
-footer{
-  padding-bottom: 40px;
+#xdbase {
+  padding-bottom: 70px;
 }
-
 /** BACKGROUND SLIDER **/
 #background-carousel{
 	position:fixed;
@@ -258,6 +257,7 @@ html { overflow-x: hidden; }
 .page-header .page-subtitle { font-weight: 300; }
 .for-bs { font-weight: bold; color: #111; display: block; }
 header, footer { display: block; width: 100%; overflow: auto; }
+footer { background: #0e83cd; }
 
 .color-1 { background: #0e83cd; }
 .color-2 { background: #f06060; }
