--- a/public/css/admin/dashboard.css
+++ b/public/css/admin/dashboard.css
@@ -1,3 +1,17 @@
+/* Affix Side Menu */
+@media (max-width: 767px) {
+    .affix {
+        position: static;
+    }
+}
+
+@media (min-width: 768px) {
+    .affix {
+        position: fixed;
+        border: 1px solid #ccc;
+    }
+}
+
 .fixed-panel {
   min-height: 200px;
   max-height: 200px;
